@@ -4,6 +4,9 @@
      [channels.c]
      fix -R for protocol 2, noticed by greg@nest.cx.
      bug was introduced with experimental dynamic forwarding.
+   - markus@cvs.openbsd.org 2001/05/09 23:01:31
+     [rijndael.h]
+     fix prototype; J.S.Peatfield@damtp.cam.ac.uk
 
 20010509
   - OpenBSD CVS Sync
@@ -5391,4 +5394,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.1215 2001/05/10 23:24:49 mouring Exp $
+$Id: ChangeLog,v 1.1216 2001/05/10 23:26:11 mouring Exp $
